--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -68,8 +68,13 @@
 }
 
 
+.border {
+    border: 1px solid #ACACAC
+}
 
-
+.pill {
+    border-radius: 99px;
+}
 
 .relative {
     position: relative;
