--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,7 +1,7 @@
 header {
     background-color: $clr4;
     // padding: 10px;
-    display: flex;
+    // display: flex;
     justify-content: space-between;
 
     width: 100%;
@@ -12,9 +12,12 @@ header {
 
     // display: grid;
     // grid-template-columns: 1fr 1fr 1fr;
-
+    .border-bottom {
+        border-bottom: 1px black solid;
+    }
 
     .head-page {
+
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -172,8 +175,46 @@ header {
 
     // }
 
+    // .sort {
+    //     display: grid;
+    //     grid-template-rows: 1fr 1fr;
+    // }
+
 
 }
+
+// todo: make sort cmp  and put there this code....
+
+
+.sort {
+    font-family: sans-serif;
+    border-top: 1px solid $clr9;
+
+    // margin-left: 18px;
+    // margin-right: 18px;
+    gap: 18px;
+    font-size: 16px;
+    color: $clr7;
+
+    img {
+        width: 24px;
+        padding: 4px 0 4px;
+        margin: 12px 0 10px
+    }
+
+    .el-sorting {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .first {
+        margin-left: 18px;
+    }
+
+}
+
 
 
 
