--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -3,10 +3,13 @@ $clr1: #ce2e6c;
 $clr2: #FF395B;
 $clr3: #574f7d;
 $clr4: #95adbe;
+
 $clr5: #ACACAC;
 $clr6: #ffffff;
 $clr7: rgba(0, 0, 0, 0.919);
 $clr8: #717171;
+$clr9: #dad5d5;
+
 
 
 
