--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-    font-family: montserrat;
+    // font-family: montserrat;
     line-height: 1.6;
     color: $clr2;
 }
@@ -16,15 +16,19 @@ html {
 body {
     font-size: rem(18px);
     margin: 0;
+
 }
 
+p,
+span,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: caveat;
+    font-family: sans-serif;
+    ;
     margin: 0 0 0.6em;
     line-height: 1;
 }
