--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -42,10 +42,18 @@
     display: grid;
 }
 
+.column {
+    flex-direction: column;
+}
 
 .flex {
 
     display: flex;
+
+    &.center {
+        justify-content: center;
+        align-items: center;
+    }
 
     >*.full {
         flex: 1;
