--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -10,8 +10,20 @@ $clr7: rgba(0, 0, 0, 0.919);
 $clr8: #717171;
 $clr9: #dad5d5;
 
+
 $clr10: #222222;
-$clr11:#B8B8B8;
+$clr11: #B8B8B8;
+$clr12: rgb(113, 113, 113);
+$clr13: radial-gradient(circle at center,
+        #FF385C 0%,
+        #E61E4D 27.5%,
+        #E31C5F 40%,
+        #D70466 57.5%,
+        #BD1E59 75%,
+        #BD1E59 100%) !important;
+
+
+
 
 
 
