--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import "cmps/review-list";
 @import "cmps/house-list";
 @import "cmps/house-details";
+@import "cmps/modal-destination";
 
 // tailwindcss
 // @import 'tailwindcss/base';
