--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -65,22 +65,34 @@ header {
         position: relative;
     }
 
+    // @include border-radius(10px);
+    // @mixin navigation-btns{
+    // }
     .navigation {
-        // padding: 10px;
-        // color: black;
-        align-items: center;
-        border: 1px solid $clr5;
-        border-radius: 120px;
-        justify-content: space-between;
+        @include navigation-btns;
         grid-template-columns: 0.45fr 0.01fr 0.45fr 0.01fr 0.65fr;
-        justify-items: center;
-
         width: rem(355px);
         height: rem(49px);
+        // padding: 10px;
+        // color: black;
+
+        // align-items: center;
+        // border-radius: 120px;
+        // justify-content: space-between;
+        // grid-template-columns: 0.45fr 0.01fr 0.45fr 0.01fr 0.65fr;
+        // justify-items: center;
+
+        // width: rem(355px);
+        // height: rem(49px);
+
+
+        border: 1px solid $clr5;
 
         .icon-search {
             max-width: 12px;
         }
+
+
 
         button {
             // height: rem(35px);
@@ -236,6 +248,7 @@ header {
     }
 
 }
+
 ::-webkit-scrollbar {
     display: none;
 }
