--- a/src/assets/styles/cmps/_modal-destination.scss
+++ b/src/assets/styles/cmps/_modal-destination.scss
@@ -55,3 +55,11 @@
 
 // .btn-navigation-mid {
 // }
+
+
+.map{
+    max-width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
